fixed a small hiccup and made the temporary table more visible

--- a/css/namesofswedenstyle.css
+++ b/css/namesofswedenstyle.css
@@ -64,6 +64,7 @@ h1{
 
 table{
     width: 100%;
+    border: 1px solid black;
 }
 
 @font-face {
